# cg-sokoban

./: .gitignore  CMakeLists.txt  LICENSE  README.md  map1.txt
assets/: lbface12png
assets/stages/: map1.txt  stage1.sok  stage2.sok  stage3.sok
src/: SokoBoard.cpp  Sokoban.cpp  direction.h  direction.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  helpers.cpp  helpers.hpp  main.cpp  map1.soko  menu.cpp  menu.hpp  position.hpp  sdl_menu.cpp  sdl_menu.hpp  soko_board.cpp  soko_board.h  soko_board.hpp  soko_character.hpp  soko_direction.hpp  soko_dynamic_object.hpp  soko_object.cpp  soko_object.h  soko_object.hpp  soko_position.cpp  soko_position.hpp
src/soko_objects/: soko_character.h  soko_empty.h  soko_heavy_box.h  soko_light_box.h  soko_object.h  soko_objects.h  soko_target.h  soko_wall.h
test/: mainTest.cpp
